fixed spacing in caption

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ body {
     font-size:25px;
     margin-left:10px;
     margin-top: 8px;
+    padding-bottom: 5px;
 }
 
 [class*='fa-bookmark']{
